package DevSkills.com.example.demo.domain.entity;

public class Pais {
}
